[gd_scene load_steps=9 format=2]

[ext_resource path="res://Fonts/PatrickHandSC100.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scenes/BackgroundTextureRect.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/ControlShaker.gd" type="Script" id=3]
[ext_resource path="res://Fonts/PatrickHandSC80.tres" type="DynamicFont" id=4]
[ext_resource path="res://Scripts/GameManager.gd" type="Script" id=5]
[ext_resource path="res://Pokemons/Sprites/101.png" type="Texture" id=6]
[ext_resource path="res://Scripts/Lives.gd" type="Script" id=9]
[ext_resource path="res://Textures/heart.png" type="Texture" id=10]

[node name="Game" type="Node"]
script = ExtResource( 5 )

[node name="Background" parent="." instance=ExtResource( 2 )]

[node name="QuestionChangeTimer" type="Timer" parent="."]

[node name="LoseTimer" type="Timer" parent="."]
wait_time = 1.3
one_shot = true

[node name="AnswerTimeTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="TextureTween" type="Tween" parent="."]

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Title" type="Label" parent="UI"]
anchor_right = 1.0
anchor_bottom = 0.236
margin_bottom = 0.11998
custom_fonts/font = ExtResource( 4 )
text = "Quiz title"
align = 1
valign = 1

[node name="Score" type="Label" parent="UI"]
anchor_left = 0.729
anchor_top = 0.344
anchor_right = 0.974
anchor_bottom = 0.471
margin_left = -0.680054
margin_top = 0.47998
margin_right = -0.0800781
margin_bottom = 0.319977
custom_fonts/font = ExtResource( 1 )
text = "Wynik: 0"
align = 2

[node name="Lives" type="Control" parent="UI"]
anchor_left = 0.026
anchor_top = 0.343
anchor_right = 0.235
anchor_bottom = 0.472
margin_left = 0.079998
margin_top = -0.440033
margin_right = -0.200012
margin_bottom = 0.23996
script = ExtResource( 9 )

[node name="MaxLivesTexture" type="TextureRect" parent="UI/Lives"]
self_modulate = Color( 0, 0, 0, 1 )
anchor_right = 0.958
anchor_bottom = 0.914
margin_right = -336.158
margin_bottom = -111.96
rect_scale = Vector2( 8, 8 )
texture = ExtResource( 10 )
expand = true
stretch_mode = 2

[node name="CurrentLivesTexture" type="TextureRect" parent="UI/Lives"]
anchor_right = 0.958
anchor_bottom = 0.914
margin_right = -336.158
margin_bottom = -111.96
rect_scale = Vector2( 8, 8 )
texture = ExtResource( 10 )
expand = true
stretch_mode = 2

[node name="PokemonTexture" type="TextureRect" parent="UI"]
anchor_top = 0.153
anchor_right = 1.0
anchor_bottom = 0.633
margin_top = -0.23999
margin_bottom = 1.35999
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="AnswerContainer" type="GridContainer" parent="UI"]
anchor_top = 0.631
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 0.52002
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 1920, 398 )
columns = 2

[node name="AnswerTimeIndicator" type="ColorRect" parent="UI"]
anchor_right = 1.0
anchor_bottom = 0.034
margin_bottom = 0.279999

[connection signal="timeout" from="QuestionChangeTimer" to="." method="on_question_change_timer_timeout"]
[connection signal="timeout" from="LoseTimer" to="." method="on_lose_timer_timeout"]
[connection signal="timeout" from="AnswerTimeTimer" to="." method="on_answer_time_timer_timeout"]
